<resources>
    <string name="app_name">Y CONFIRMED</string>
    <string name="projectName">Y CONFIRMED</string>
    <string name="yeezy_boost_v2_350_yecheil_nrf">YEEZY BOOST V2 350 YECHEIL NRF</string>
    <string name="yeezy_boost_v2_350_yecheil_nrf_question">НАЖМИ НА ИЗОБРАЖЕНИЕ С МЯЧОМ В СЕТКЕ</string>
    <string name="_20_2019">20 ДЕКАБРЯ, 2019</string>
    <string name="Stats">СТАТИСТИКА</string>
    <string name="Stats_text1">CАМАЯ УСПЕШНАЯ МОДЕЛЬ</string>
    <string name="Stats_text2">CАМАЯ УСПЕШНАЯ КАПЧА</string>
    <string name="Stats_text3">CАМАЯ ПРОБЛЕМНАЯ МОДЕЛЬ</string>
    <string name="Stats_text4">CАМАЯ ПРОБЛЕМНАЯ КАПЧА</string>
    <string name="Stats_text5">РЕШЕНО КАПЧ</string>
    <string name="Stats_text6">СРЕДНЕЕ ВРЕМЯ РЕШЕНИЯ КАПЧ</string>
    <string name="Stats_cont1">YEEZY BOOST 700 WAVERUNNER - 88 / 100</string>
    <string name="Stats_cont2">ВНУТРЕННЯЯ ЧАСТЬ ПОМЕЩЕНИЯ - 88 / 100</string>
    <string name="Stats_cont3">YEEZY BOOST 350 V2 YEEZREEL GLOW RF - 33 / 70</string>
    <string name="Stats_cont4">ТЯЖЕЛАЯ АТЛЕТИКА - 63 / 100</string>
    <string name="Stats_cont5">432</string>
    <string name="Stats_cont6">1.5 сек</string>
    <string name="ic_settings_description">Settings</string>
    <string name="a_about">О ПРИЛОЖЕНИИ</string>
    <string name="about_1">ВЕРСИЯ ПРИЛОЖЕНИЯ</string>
    <string name="about_2">ПОСЛЕДНЕЕ ОБНОВЛЕНИЕ</string>
    <string name="about_3">СМЕНИТЬ МОДЕЛЬ НА ТЕМУ КАПЧИ</string>
    <string name="about_c1">0.0.X</string>
    <string name="about_c2">Пока еще ничего не добавили</string>
    <string name="about_c3">Изменяет селектор выбора по модели на выбор по теме капчи, тем самым объединяя несколько моделей с одинаковой капчей.</string>
    <string name="further">ДАЛЕЕ</string>
    <string name="finish">ЗАКОНЧИТЬ</string>
    <string name="correct">ПРАВИЛЬНО</string>
    <string name="_1_2">1.2 СЕК</string>
    <string name="incorrect">НЕ ПРАВИЛЬНО</string>
    <string name="res">РЕЗУЛЬТАТЫ</string>
    <string name="quick">САМОЕ БЫСТРОЕ РЕШЕНИЕ</string>
    <string name="slow">САМОЕ МЕДЛЕННОЕ РЕШЕНИЕ</string>
    <string name="avg">СРЕДНЕЕ ВРЕМЯ РЕШЕНИЯ</string>
    <string name="captchaSubTitleL">ПОБЕЖДАЮТ САМЫЕ БЫСТРЫЕ</string>
    <string name="captchaSubTitleS">ТОРОПИСЬ!</string>
    <string name="captchaTitle">ВЫБЕРИ ВЕРНОЕ ИЗОБРАЖЕНИЕ</string>

</resources>
